--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -4,5 +4,15 @@
 
 .ui.main.container{
   margin-top: 5em;
+  height: 50px;
 
+}
+
+.Navi{
+  height: 55px;
+}
+
+
+.SignedOut{
+  margin-top: 8px;
 }
